fix font sizes for auto zoom issue on safari

--- a/src/organisms/ContactForm/ContactForm.module.css
+++ b/src/organisms/ContactForm/ContactForm.module.css
@@ -39,7 +39,7 @@
   width: 100%;
   padding: 1rem;
   font-family: var(--font-family-secondary);
-  font-size: 0.875rem;
+  font-size: 1rem;
   color: var(--color-gray-lighter);
   background-color: var(--color-gray-darkest);
   border: 1px solid var(--color-gray-dark);
@@ -68,7 +68,7 @@
   -webkit-box-shadow: 0 0 0 1000px var(--color-gray-darkest) inset;
   box-shadow: 0 0 0 1000px var(--color-gray-darkest) inset;
   font-family: var(--font-family-secondary);
-  font-size: 0.875rem;
+  font-size: 1rem;
   caret-color: var(--color-gray-lighter);
   transition: background-color 5000s ease-in-out 0s;
 }
@@ -89,7 +89,7 @@
 .phonePrefix {
   padding-left: 1rem;
   font-family: var(--font-family-secondary);
-  font-size: 0.875rem;
+  font-size: 1rem;
   color: var(--color-gray-light);
   user-select: none;
 }
